Fix prototyping preview image overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3208,25 +3208,48 @@ section h3 {
 }
 
 #three .inner {
+  width: 100%;
   display: grid;
   grid-template-columns: 60% 40%;
-  grid-gap: 20px;
+  grid-template-rows: 1fr auto;
+  grid-gap: 15px;
 }
 #three .image {
+  grid-row: 1/3;
+  grid-column: 2/3;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
+  overflow: hidden;
 }
 #three .image img {
-  height: 100%;
+  width: 100%;
+  object-position: center;
   position: absolute;
 }
-
-.clearfix:after {
-  content: "";
-  visibility: hidden;
-  display: block;
-  height: 0;
-  clear: both;
+@media screen and (max-width: 690px) {
+  #three .inner {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+  #three .image {
+    display: block;
+    height: 400px;
+    margin-bottom: 40px;
+  }
+  #three .image img {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 480px) {
+  #three .image {
+    height: 260px;
+  }
+}
+@media screen and (max-width: 360px) {
+  #three .image {
+    height: 200px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
