--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -30,7 +30,6 @@ section h3 {
   padding: 0;
 
   .image {
-
     &.fit {
       height: 20vw;
       overflow: hidden;
@@ -44,28 +43,55 @@ section h3 {
 
 #three {
   .inner {
+    width: 100%;
     display: grid; 
     grid-template-columns: 60% 40%;
-    grid-gap: 20px;
+    grid-template-rows: 1fr auto;
+    grid-gap: 15px;
   }
 
   .image {
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
+    overflow: hidden;
 
     img { 
-      height: 100%;
+      width: 100%;
+      object-position: center;
       position: absolute;
     }
   }
-}
 
-.clearfix:after {
-  content: "";
-  visibility: hidden;
-  display: block;
-  height: 0;
-  clear: both;
-}
+  @media screen and (max-width: 690px) {
+    .inner {
+      display: flex; 
+      flex-direction: column;
+      margin-bottom: 40px;
+    }
 
+    .image {
+      display: block;
+      height: 400px;
+      margin-bottom: 40px;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    .image {
+      height: 260px;
+    }
+  }
+
+  @media screen and (max-width: 360px) {
+    .image {
+      height: 200px;
+    }
+  }
+}
 
